# eurobot_2023

./: .gitignore  .gitmodules  Dockerfile  README.md  Transform_definition.md  autocomposer.service  compose.yaml  init.sh  instruction.md  start.sh
docs/old_programm/: camera_tank.launch.py  description_tank.launch.py  tank.launch.py  tank_gazebo.launch.py
docs/tank_core_model/tank/: package.xml
ros2_ws/src/action/: package.xml  setup.py
ros2_ws/src/camera/: aruco_detect.py
ros2_ws/src/camera_detection/: package.xml  setup.py
ros2_ws/src/data_merge/: package.xml  setup.cfg  setup.py
ros2_ws/src/data_update/: package.xml  setup.cfg  setup.py
ros2_ws/src/extended_pkgs/gzb_sim/: package.xml  setup.cfg  setup.py
ros2_ws/src/extended_pkgs/gzb_sim/launch/: simulation.launch.py
ros2_ws/src/extended_pkgs/gzb_sim/rviz/: config.rviz
ros2_ws/src/extended_pkgs/gzb_sim/urdf/: tank.urdf
ros2_ws/src/extended_pkgs/gzb_sim/world/: arena.sdf
ros2_ws/src/extended_pkgs/gzb_sim/world/Arena/meshes/: Solar_pannel_1.dae  Solar_pannel_2.dae  Solar_pannel_3.dae  Solar_pannel_4.dae  Solar_pannel_5.dae  Solar_pannel_6.dae  Solar_pannel_7.dae  Solar_pannel_8.dae  Solar_pannel_9.dae  base_link.dae
ros2_ws/src/extended_pkgs/gzb_sim/world/plant/meshes/: base_link.dae
ros2_ws/src/extended_pkgs/gzb_sim/world/pot/meshes/: base_link.dae
ros2_ws/src/localization/: package.xml  setup.py
ros2_ws/src/path_planning/: package.xml  (+1 more)
ros2_ws/src/tank/: package.xml  setup.py
ros2_ws/src/tank/config/: ekf.yaml
ros2_ws/src/tank/launch/: default_tank.launch.py  main_launch.launch.py  move_base.launch.py  tank_bringup.launch.py
ros2_ws/src/tank/rviz/: config.rviz
ros2_ws/src/tank/tank/: ARUCO_detect.py  ArUco.py  Aruco.py  QR_detector.py  action_planning.py  after_the_stop.py  angle_radius.py  drum_rotate.py  main_algorithm.py  minimal_publisher.py  move_base.py  move_planning.py  plant_grabbing.py  reboot.py  robot_place.py  scanner.py  scanning.py  screen.py  static_radius.py  systest_script.py  tank_camera.py
scipts/: camera_calibration.py
tank_core_model/tank/: CMakeLists.txt
(+17 files in other folders)
