<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gzb_sim</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="TManshin@yandex.ru">pi</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <depend>rclpy</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <test_depend>ros_gz_sim</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
